mobile and desktop spacing fixed (tablet might need fixing)

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -229,26 +229,33 @@ svg {
   display: -ms-flexbox;
   display: flex;
   margin: 0 auto;
-  padding-top: var(--padd-main-v);
+  // padding-top: var(--padd-main-v);
 }
 
-//exception in the "about" page
-#background {
-  padding-top: var(--padd-main-v);
-  padding-bottom: var(--padd-main-v);
-}
+// //exception in the "about" page
+// #background {
+//   padding-top: calc(2* var(--padd-main-v));
+//   padding-bottom: calc(2* var(--padd-main-v));
+// }
 
 /* Center container of content */
 .about-container {
   max-width: 100vw;
   margin: 0 auto;
   padding: var(--padd-main-h);
+  padding-top: calc(1.5 *var(--padd-main-v));
+  padding-bottom: calc(1.5 *var(--padd-main-v));
 }
 
-.homepage {
+#about-homepage {
+  padding-top: calc(1.2 * var(--padd-main-v)); //excecao
   padding-right: none;
-  
 }
+
+// .homepage {
+//   padding-right: none;
+  
+// }
 
 .back-info-container {
   display: -webkit-box;
@@ -264,9 +271,11 @@ svg {
 
 /* -------- BACKGROUND -------- */
 
-#background > .about-container {
-  margin-bottom: 0;
-}
+// #background > .about-container {
+//   margin-bottom: 0;
+//   padding-top: 0;
+//   padding-bottom: 0;
+// }
 
 .back-info h4 {
   margin-bottom: 10px;
@@ -290,7 +299,7 @@ svg {
   text-transform: uppercase;
   font-size: 3.5rem;
   text-align: center;
-  display: block;
+  // display: block;
   margin-left: 0px;
   color: var(--white);
   white-space: nowrap;
@@ -299,16 +308,23 @@ svg {
 
 /* Style horizontal word spacing (mobile) */
 .skills li {
-  padding: 10px 0;
+  padding-bottom: 20px;
 }
 
-    /* APPROACH */
-  
-    .approach p {
-      font-weight: 500;
-      margin-bottom: 35px;
-    }
-  
+.skills :last-child {
+  padding-bottom: 0;
+}
+
+  /* APPROACH */
+
+  .approach p {
+    font-weight: 500;
+    margin-bottom: 35px;
+  }
+
+  #steps :last-child {
+    margin-bottom: 0;
+  }
 
 
 /* Style logo*/
@@ -582,10 +598,13 @@ p .post-result {
 
 #about-pg .about-container {
   margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
+
 #about-pg {
-  padding-top: 0;
+  padding-top: var(--padd-main-h);
 }
 
 .about-img {
@@ -668,14 +687,14 @@ ul {
   .about-container {
       max-width: 580px;
       margin: 0 auto;
-      padding-top: calc(2.3 * var(--padd-main-v));
-      padding-bottom: calc(1.5 * var(--padd-main-v));
+      padding-top: calc(2 * var(--padd-main-v));
+      padding-bottom: calc(2 * var(--padd-main-v));
   }
 
-  #background {
-    padding-top: var(--padd-main-v);
-    padding-bottom: var(--padd-main-v);
-  }
+  // #background {
+  //   padding-top: var(--padd-main-v);
+  //   padding-bottom: var(--padd-main-v);
+  // }
 
   #bio {
     padding-top: var(--padd-main-v);
@@ -684,10 +703,10 @@ ul {
     padding-bottom: 0;
   }
 
-  .homepage {
-      padding-top: calc(2 * var(--padd-main-v));
-      padding-bottom: calc(2 * var(--padd-main-v));
-  }
+  // .homepage {
+  //     padding-top: calc(2 * var(--padd-main-v));
+  //     padding-bottom: calc(2 * var(--padd-main-v));
+  // }
       
   #background > .about-container {
       max-width: 580px;
@@ -695,10 +714,10 @@ ul {
       // margin-bottom: var(--padd-main-v);
   }
 
-  #back-info {
-    padding-top: calc(2.7 * var(--padd-main-v));
-    padding-bottom: calc(2.7 * var(--padd-main-v));
-  }
+  // #back-info {
+  //   padding-top: calc(2.7 * var(--padd-main-v));
+  //   padding-bottom: calc(2.7 * var(--padd-main-v));
+  // }
 
   .skills ul, .skills li {
     margin: 0;
@@ -892,14 +911,13 @@ ul {
       max-width: 100vw;
       margin: 0 auto;
       padding-top: calc(2.3 * var(--padd-main-v)); //para que o espaçamento entre os projetos e o about sejam 4 quadrados
-      padding-bottom: calc(1.5 * var(--padd-main-v));
+      padding-bottom: calc(2.3 * var(--padd-main-v));
       padding-left: calc(2.3 * var(--padd-main-v));
       padding-right: 37vw;
   }
   
   #about-homepage {
     padding-top: calc(1.5 * var(--padd-main-v)); //excecao
-    padding-bottom: calc(2.3 * var(--padd-main-v)); //excecao
   }
 
   .homepage {
